deploy/demo-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-metrics
  namespace: dev
  annotations:
    flux.weave.works/tag.podinfod: glob:*
    flux.weave.works/automated: 'true'
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-metics
  template:
    metadata:
      labels:
        app: demo-metics
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: demo-metics
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
