deploy/demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: demo-metrics
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: demo-metrics
          servicePort: 3000
        path: /demo-metrics
    host: training-user-20.training.weave.works
status:
  loadBalancer: {}
